Changed the order of playRound function placing updateRound last, squishing bug displaying correct result

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,6 +222,17 @@ h2 {
 /* ------------------Large screen displays------------------ */
 @media screen and (min-width: 900px) {
 
+    h1 {
+        font-size: 90px;
+    }
+
+    h2 {
+        font-size: 70px;
+    }
+    p {
+        font-size: 30px;
+    }
+
     #alert-section,
     #score-area,
     #button-area {
